connect neo4j between  entity
